# graphqlapi

./: .gitignore  .luacheckrc  .luacov  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  deps.sh  graphqlapi-0.0.1-1.all.rock  graphqlapi-0.0.1-1.rockspec  graphqlapi.lua  log
cartridge/roles/: graphqlapi.lua
cmake/: FindTarantool.cmake
docs/: cluster.md  graphqlapi.md  helpers.md  middleware.md  models.md  operations.md  types.md
example/: init.lua
example/models/: spaces.lua
graphqlapi/: cluster.lua  defaults.lua  funcall.lua  graphqlapi.lua  helpers.lua  init.lua  middleware.lua  models.lua  operations.lua  printer.lua  spaceapi.lua  spaces.lua  trigger.lua  types.lua  utils.lua  vars.lua
graphqlapi/helpers/: data.lua  spaceapi.lua  spaces.lua
test/: helper.lua
test/entrypoint/: basic_srv.lua  init.lua
test/entrypoint/app/roles/: api.lua  storage.lua
test/helper/: entity_space.lua  integration.lua  unit.lua
test/integration/: api_test.lua  cluster_test.lua  graphqlapi_role_test.lua  graphqlapi_test.lua  graphqlapi_test.lua1  spaceapi_test.lua  spaceapi_test.lua1
test/models/suite1/: invalid_space.lua  invalid_spaces.lua  missing_spaces.lua  module.lua  syntax_error.lua  valid_model.lua
test/models/suite1/spaces/: spaces.lua
test/unit/: funcall_test.lua  graphqlapi_test.lua  helpers_test.lua  init_test.lua  middleware_test.lua  models_test.lua  operations_test.lua  spaceapi_test.lua  spaces_helpers_test.lua  spaces_test.lua  trigger_test.lua  types_test.lua  utils_test.lua  vars_test.lua
